<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <include
        layout="@layout/base_window"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/icon_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/registrationUsernameEditText"
        app:layout_constraintEnd_toEndOf="@+id/registrationUsernameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registrationUsernameEditText"
        app:layout_constraintTop_toTopOf="@+id/registrationUsernameEditText"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/et_name" />

    <ImageView
        android:id="@+id/icon_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/registrationPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/registrationPasswordEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registrationPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/registrationPasswordEditText"
        app:srcCompat="@drawable/et_password"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/registrationEmailEditText"
        app:layout_constraintEnd_toEndOf="@+id/registrationEmailEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registrationEmailEditText"
        app:layout_constraintTop_toTopOf="@+id/registrationEmailEditText"
        app:layout_constraintVertical_bias="0.411"
        app:srcCompat="@drawable/et_email" />

    <Button
        android:id="@+id/registrationButtonCreate"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/template_button"
        android:text="@string/text_button_registration"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <EditText
        android:id="@+id/registrationUsernameEditText"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/text_hint_username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="39dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/registrationEmailEditText"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/text_hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="39dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/registrationPasswordEditText"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/text_hint_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="39dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/registrationLoginText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:shadowColor="#88000000"
        android:text="@string/text_clickable_registration"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/registrationPrefixLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prefix_login"
        android:textColor="#FFFDFD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButtonCreate"
        app:layout_constraintVertical_bias="0.097" />

</androidx.constraintlayout.widget.ConstraintLayout>