<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/img_people"
        android:layout_width="461dp"
        android:layout_height="541dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/background_illustration"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/img_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/loginPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/loginPasswordEditText"
        app:srcCompat="@drawable/et_password"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/loginEmailEditText"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailEditText"
        app:layout_constraintTop_toTopOf="@+id/loginEmailEditText"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/et_email" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="85dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/loginAuthButton"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/template_button"
        android:text="@string/text_button_auth"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="39dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697"
        android:importantForAutofill="no"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/text_hint_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="39dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/loginCreateText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:shadowColor="#88000000"
        android:text="@string/text_createaccount"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/loginResetText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:shadowColor="#88000000"
        android:text="@string/text_resetpassword"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/loginLogoSecondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/text_logo_second"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/loginLogoFirstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/text_logo_first"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/loginPrefixReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prefix_reset"
        android:textColor="#FFFDFD"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAuthButton"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/loginPrefixCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prefix_create"
        android:textColor="#FFFDFD"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAuthButton"
        app:layout_constraintVertical_bias="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>